--- a/readme
+++ b/readme
@@ -15,3 +15,8 @@ get request response
 post
 update
 delete
+
+to open a new terminal in vscode is ctrl+j
+
+jsonplaceholder - site to test
+jsonplaceholder.typicode.com
